# NexusChat

./: .gitignore
DOC/: installl.md
DOC/cpp/: cpp.md  makefile  run  test.cpp
DOC/makefiletest/: makefile  makefile.md
NexusClient/: CMakeLists.txt  CMakeLists.txt.suQLmE  ClientWindow.cpp  ClientWindow.h  Debug.h  main.cpp  resource.qrc
NexusClient/common/: MessageType.h  MyLog.h  Status.h
NexusClient/component/: Applylists.cpp  Applylists.h  Baseitem.cpp  Baseitem.h  FriendsLists.cpp  FriendsLists.h  MessageEdit.cpp  MessageEdit.h  MessageShow.cpp  MessageShow.h  MidSessionFriendAread.cpp  MidSessionFriendAread.h  SessionLists.cpp  SessionLists.h  midsessionfriendaread.cpp  midsessionfriendaread.h
NexusClient/factory/: MsgFac.h  SlotFac.h
NexusClient/init/: InitContacts.cpp  InitContacts.h  InitForchat.cpp  InitMainWindow.cpp  InitNavigation.cpp  InitSignalSlot.cpp
NexusClient/load/: LoadAccess.cpp  LoadChat.cpp  LoadFriend.cpp
NexusClient/model/: ChatSessionInfo.h  Message.h  MessageType.h  UserInfo.h
NexusClient/style/: ButtonStyle.h  LineEditStyle.h  ScrollbarStyle.h  Style.h
NexusClient/tool/: Byte2Icon.h  MakeId.h  MakeTime.h  ReadFile.h
